infra/k8s-dev/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - localhost
      secretName: localhost-dev-tls

  rules:
    - host: localhost
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bff-srv
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
